# PTools

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  config.example.yaml  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: auth_gate.py  gy_auth.py  gy_daily_import.py  gy_files.py  gy_magnets.py
backend/app/clients/: gy_client.py
backend/app/models/: __init__.py  gy.py
backend/app/services/: gy_auth_service.py  gy_daily_import_service.py  gy_file_service.py  gy_magnet_service.py
backend/p_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/api/modules/: gyNetdisk.ts
frontend/src/components/: FolderPicker.vue
frontend/src/composables/: useFormatSize.ts  useRelativeTime.ts
frontend/src/router/: index.ts
frontend/src/stores/: gyNetdisk.ts
frontend/src/styles/: global.css
frontend/src/types/: gyNetdisk.ts
frontend/src/views/: HomeView.vue  VerifyView.vue
frontend/src/views/gy-netdisk/: GyNetdiskDailyImport.vue  GyNetdiskFiles.vue  GyNetdiskHome.vue  GyNetdiskLogin.vue  GyNetdiskMagnets.vue
