[project]
name = "p-backend"
version = "0.1.0"
description = "个人工具集后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "PyJWT>=2.10",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
